--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ lang: en
 
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
-timezone: Asia/Shanghai
+timezone: Asia/Kolkata
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
@@ -27,18 +27,18 @@ description: >-                        # used by seo meta and the atom feed
   A minimal, responsive, and powerful Jekyll theme for presenting professional writing.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ''
+url: 'https://turbocdn.github.io'
 
 github:
-  username: github_username             # change to your github username
+  username: turbocdn            # change to your github username
 
 twitter:
-  username: twitter_username            # change to your twitter username
+  username: turbocdn            # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
+  name: turbocdn
   email: example@domain.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
@@ -78,7 +78,7 @@ theme_mode:   # [light|dark]
 # will be added to all image (site avatar & posts' images) paths starting with '/'
 #
 # e.g. 'https://cdn.com'
-img_cdn: 'https://demo-img.cotes.page'
+img_cdn: ''
 
 # the avatar on sidebar, support local or CORS resources
 avatar: '/commons/avatar.jpg'
