--- a/_config.yml
+++ b/_config.yml
@@ -208,6 +208,7 @@ plugins:
   - jekyll-paginate
   - jekyll-sitemap
   - jekyll-gist
+  - jekyll-include-cache
   - jemoji
   - jekyll-target-blank
   - jekyll-loading-lazy
