--- a/_config.yml
+++ b/_config.yml
@@ -201,3 +201,12 @@ jekyll-archives:
     
     
     
+plugins:
+  - jekyll-seo-tag
+  - jekyll-feed
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-gist
+  - jemoji
+  - jekyll-target-blank
+  - jekyll-loading-lazy
