--- a/_config.yml
+++ b/_config.yml
@@ -202,6 +202,15 @@ jekyll-archives:
     
     
 plugins:
-  - jekyll-sitemap
-  - jekyll-loading-lazy
+  - jekyll-seo-tag
   - jekyll-feed
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-gist
+  - jemoji
+  - jekyll-target-blank
+  - jekyll-loading-lazy
+  - jekyll-include-cache   # jekyll compress does not work for this.
+  - jekyll-gzip            # jekyll compress does not work for this
+#   - jekyll-compress-images # increase the build time
+#   - amp-jekyll             # does not work properly
