--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ title: Chirpy                          # the main title
 tagline: A text-focused Jekyll theme   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  A minimal, responsive, and powerful Jekyll theme for presenting professional writing.
+  Technical blog for presenting professional writing.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: 'https://turbocdn.github.io'
@@ -48,7 +48,7 @@ social:
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
 
-google_site_verification:               # fill in to your verification string
+google_site_verification: Q8eN3pbxrWIGkLCDZKniG3jMtd9cO9WtGPM363QSPeM              # fill in to your verification string
 
 # ↑ --------------------------
 # The end of `jekyll-seo-tag` settings
@@ -81,13 +81,13 @@ theme_mode:   # [light|dark]
 img_cdn: ''
 
 # the avatar on sidebar, support local or CORS resources
-avatar: '/commons/avatar.jpg'
+avatar: 'https://avatars.githubusercontent.com/u/121346381?s=200&v=4'
 
 # boolean type, the global switch for ToC in posts.
 toc: true
 
 comments:
-  active:         # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
+  active:    'giscus'     # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
   # The active options are as follows:
   disqus:
     shortname:    # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
@@ -97,14 +97,14 @@ comments:
     issue_term:   # < url | pathname | title | ...>
   # Giscus options › https://giscus.app
   giscus:
-    repo:              # <gh-username>/<repo>
-    repo_id:
-    category:
-    category_id:
-    mapping:           # optional, default to 'pathname'
-    input_position:    # optional, default to 'bottom'
-    lang:              # optional, default to the value of `site.lang`
-    reactions_enabled: # optional, default to the value of `1`
+    repo:             'SamirPaulb/comments'
+    repo_id:          'R_kgDOIMPz0Q'
+    category:         'General'
+    category_id:      'DIC_kwDOIMPz0c4CR7E4'
+    mapping:          'pathname'
+    input_position:   'top'
+    lang:             'en'
+    loading:          'lazy'
 
 # Self-hosted static assets, optional › https://github.com/cotes2020/chirpy-static-assets
 assets:
@@ -211,6 +211,6 @@ plugins:
   - jekyll-target-blank
   - jekyll-loading-lazy
   - jekyll-include-cache   # jekyll compress does not work for this.
-  - jekyll-gzip            # jekyll compress does not work for this
+  # - jekyll-gzip            # jekyll compress does not work for this
 #   - jekyll-compress-images # increase the build time
 #   - amp-jekyll             # does not work properly
