--- a/_config.yml
+++ b/_config.yml
@@ -19,12 +19,12 @@ timezone: Asia/Kolkata
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy                          # the main title
+title: TurboCDN                          # the main title
 
-tagline: A text-focused Jekyll theme   # it will display as the sub-title
+tagline: Technical blog   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  Technical blog for presenting professional writing.
+  TurboCDN - technical blog for presenting professional writing.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: 'https://turbocdn.github.io'
